# RussianFishing4Script

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  TODO.md  config.ini  config.yaml  config1.yaml  exit_test.py  feeder.py  fisherman.py  integrity_guide.md  main.py  map_test.py  mouse.py  new.py  pyproject.toml  record.py  release_notes.md  requirements.txt  rod.py  setup.bat  setup.py  start.bat  template.ini  test.py  test.spec  timer.py  tt.py  中文版README.md  中文版template.ini  中文版教程.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yaml  ruff-action.yaml
config/: defaults.py
dev-tools/: compile.bat  compile_venv.bat
docs/: CHANGELOG.md  CONFIGURATION.md  CONFIGURATION_zh-TW.md  Configuration.md  README_zh-TW.md  integrity_guide.md  release_notes.md  中文版README.md
docs/en/: CHANGELOG.md  CONFIGURATION.md  INSTALLATION.md
docs/ru/: CHANGELOG.md  CONFIGURATION.md  INSTALLATION.md  README.md
docs/zh-TW/: CHANGELOG.md  CONFIGURATION.md  INSTALLATION.md  README.md
rf4s/: exceptions.py  mouse.py  player.py  utils.py
rf4s/app/: __init__.py  app.py  core.py  logger.py
rf4s/component/: friction_brake.py  tackle.py
rf4s/config/: __init__.py  config.py  config.yaml  defaults.py
rf4s/controller/: detection.py  notification.py  player.py  timer.py  window.py
rf4s/i18n/: __init__.py  en.yml  ru.yml  zh-TW.yml
rf4s/i18n/locales/: app.en.json  app.ru.json  en.json  friction_brake.en.json  friction_brake.ru.json  main.en.json  main.ru.json  notification.en.json  notification.ru.json  player.en.json  player.ru.json  result.en.json  result.ru.json  ru.json  tackle.en.json  tackle.ru.json  utils.en.json  utils.ru.json  window.en.json  window.ru.json
rf4s/result/: __init__.py  result.py
rf4s/tests/: pdi_smoke.py  wiggle_test.py
src/: app.py  auto_friction_brake.py  calculate.py  calculator.py  craft.py  detection.py  exceptions.py  fisherman.py  friction_brake.py  frictionbrake.py  harvest.py  make.py  monitor.py  mouse.py  move.py  player.py  reel.py  rod.py  script.py  setting.py  setting_handler.py  tackle.py  test.py  timer.py  trolling.py  userprofile.py  utils.py  validate.py  window.py  windowcontroller.py
src/config/: config.py  defaults.py
tests/: backspace.py  cmd_arg.py  confidence.py  exit_test.py  feeder.py  file.py  get_hour.py  head.py  healthbar.py  listener.py  map_test.py  mark.py  new.py  parser.py  path.py  pixel.py  record.py  table_test.py  test_reel.py  thread.py  time.py  tt.py
tools/: auto_friction_brake.py  calculate.py  craft.py  harvest.py  main.py  move.py
ui_test/: main.py  pyproject.toml  test.py  ui.py
