[project]
name = "russianfishing4script"
version = "0.10.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bracex==2.6",
    "bump-my-version==1.2.7",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "discord-webhook==1.4.1",
    "easyprocess==1.1",
    "entrypoint2==1.1",
    "fonttools==4.59.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "keyboard==0.13.5",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "matplotlib==3.8.0",
    "mdurl==0.1.2",
    "mouseinfo==0.1.3",
    "mss==10.0.0",
    "nuitka==2.7.12",
    "numpy==1.26.4",
    "opencv-python==4.8.0.76",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "pillow==10.1.0",
    "prompt-toolkit==3.0.51",
    "pyautogui==0.9.54",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygetwindow==0.0.9",
    "pygments==2.19.2",
    "pymsgbox==1.0.9",
    "pynput==1.7.6",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreenshot==3.1",
    "pyscreeze==0.1.29",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-i18n[yaml]==0.3.9",
    "pytweening==1.2.0",
    "pywin32==306",
    "pyyaml==6.0.2",
    "questionary==2.1.0",
    "requests==2.32.4",
    "rich==14.1.0",
    "rich-argparse==1.7.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tomlkit==0.13.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wcmatch==10.1",
    "wcwidth==0.2.13",
    "yacs==0.1.8",
    "zstandard==0.23.0",
]

[tool.bumpversion]
current_version = "0.10.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "rf4s/config/config.yaml"
search = "VERSION: \"{current_version}\""
replace = "VERSION: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "rf4s/config/defaults.py"
search = "VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "main.py"
search = "^VERSION = \"{current_version}\""
replace = "VERSION = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "uv.lock"
search = """name = \"russianfishing4script\"
version = \"{current_version}\"
"""
replace = """name = \"russianfishing4script\"
version = \"{new_version}\"
"""
